--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ header{
     width: 26vw;
     height: 100vh;
     background-color: black;
-    border-right: 1px solid gray;
+    border-right: 1px solid rgba(128, 128, 128, 0.493);
 }
 i{
     color: rgb(212, 212, 212);
@@ -115,17 +115,106 @@ p.name{
 p.username{
     color: rgb(163, 163, 163);
 }
+.ellipsis{
+    margin-left: 4rem;
+}
+
+/* main section */
+
 main{
     width: 74vw;
     height: 100vh;
+    background-color: gray;
+}
+.main-header{
+    background-color: black;
+    padding: 0.5rem;
+    width: 39vw;
+    position: sticky;
+    top: 0px;
+    display: flex;
+    color: white;
+    justify-content: space-between;
+    align-items: center;
+}
+.heading-home > h3{
+    font-size: 1.2rem;
+    margin-left: 1rem;
+}
+.top-tweets{
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.top-tweets:hover{
+    transition: 0.4s;
+    background-color: rgba(135, 207, 235, 0.279);
+}
+div.scroll-feed{
+    width: 39vw;
+    height: max-content;
+}
+.create-post{
     background-color: black;
 }
-div.sticky{
-    width: 47%;
-    height: 100%;
-    border-left: 1px solid gray;
-    float: right;
+.upper-section{
+    padding: 0.5rem 1rem;
+    display: flex;
+    align-items: center;
 }
-.ellipsis{
-    margin-left: 4rem;
+div.upper-section > .profile-pic{
+    margin-right: 0.7rem;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+.create-post input{
+    border: none;
+    color: white;
+    margin-top: 0.5rem;
+    background-color: transparent;
+    outline: none;
+    font-size: 1.2rem;
+}
+div.lower-section{
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.icons{
+    margin-left: 3.54rem;
+    display: flex;
+    gap: 0.5rem;
+}
+.icon-box{
+    height: 30px;
+    width: 30px;
+    padding: 0.2rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icon-box:hover{
+    background-color: rgba(135, 207, 235, 0.215);
+    transition: 0.4s;
+    cursor: pointer;
+}
+.icon-box > i{
+    font-size: 0.9rem;
+    color: #1D9BF0;
+}
+button.tweet-post{
+    background-color: rgb(29 155 240);
+    padding: 0.5rem 1rem;
+    color: rgba(255, 255, 255, 0.522);
+    font-weight: bold;
+    font-size: 1rem;
+    border: none;
+    outline: none;
+    border-radius: 5rem;
 }
