--- a/style.css
+++ b/style.css
@@ -159,6 +159,7 @@ div.scroll-feed{
 }
 .create-post{
     background-color: black;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.493);
 }
 .upper-section{
     padding: 0.5rem 1rem;
@@ -184,6 +185,7 @@ div.lower-section{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 .icons{
     margin-left: 3.54rem;
@@ -209,7 +211,7 @@ div.lower-section{
     color: #1D9BF0;
 }
 button.tweet-post{
-    background-color: rgb(29 155 240);
+    background-color: rgb(25, 101, 152);
     padding: 0.5rem 1rem;
     color: rgba(255, 255, 255, 0.522);
     font-weight: bold;
@@ -217,4 +219,45 @@ button.tweet-post{
     border: none;
     outline: none;
     border-radius: 5rem;
+}
+
+div.news-feed-post{
+    padding: 1rem 0;
+    background-color: black;
+    color: white;
+    display: flex;
+}
+.left{
+    padding: 0.5rem;
+}
+.left > img{
+    border-radius: 50%;
+}
+.right-upper{
+    display: flex;
+    gap: 0.2rem;
+}
+.right-lower{
+    padding: 0.3rem 0;
+}
+pre{
+    color: rgb(212, 212, 212);
+}
+.actions{
+    display: flex;
+    margin: 0 1rem;
+    justify-content: space-between;
+}
+.action-box{
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+.box{
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
