--- a/style.css
+++ b/style.css
@@ -1,36 +1,43 @@
-
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-body{
+
+body {
     background-color: black;
 }
-div.page{
+
+div.page {
     display: flex;
-    position: relative;
+    justify-content: flex-start;
+    width: 100%;
 }
-header{
+
+header {
     position: fixed;
-    width: 26vw;
+    width: 26%;
     height: 100vh;
     background-color: black;
     border-right: 1px solid rgba(128, 128, 128, 0.493);
 }
-i{
+
+i {
     color: rgb(212, 212, 212);
 }
-p{
+
+p {
     color: rgb(255, 255, 255);
 }
-.header-container{
+
+.header-container {
     height: 100%;
     width: 64%;
     float: right;
 }
-div.twitter-icon{
+
+div.twitter-icon {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -40,21 +47,23 @@ div.twitter-icon{
     width: 50px;
     border-radius: 50%;
 }
-div.twitter-icon:hover{
+
+div.twitter-icon:hover {
     cursor: pointer;
     transition: 0.4s;
     background-color: rgba(135, 207, 235, 0.111);
 }
 
-.fa-twitter{
+.fa-twitter {
     font-size: 1.8rem;
 }
-div.icon{
+    .icon {
     display: flex;
     flex-direction: column;
     gap: 0.3rem;
 }
-.capsule{
+
+.capsule {
     padding: 0.8rem;
     padding-right: 2rem;
     max-width: min-content;
@@ -63,73 +72,94 @@ div.icon{
     border-radius: 10rem;
     align-items: center;
 }
-.capsule > i {
+
+.capsule>i {
     font-size: 1.3rem;
 }
-.capsule-text{
+
+.capsule-text {
     font-size: 1.3rem;
 }
-.capsule:hover{
+
+.capsule:hover {
     cursor: pointer;
     transition: 0.4s;
     background-color: rgb(128, 128, 128, 0.242);
 }
-.tweet-button{
+
+.tweet-button-text, .tweet-button-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin: 0.5rem 0;
     padding: 1rem;
     font-size: 1rem;
     font-weight: bold;
     width: 85%;
+    height: 50px;
     border-radius: 10rem;
     border: none;
     color: white;
     background-color: rgb(29 155 240);
 }
-.tweet-button:hover{
+
+.tweet-button-text:hover, .tweet-button-icon:hover  {
     cursor: pointer;
     background-color: rgb(17, 129, 204);
     transition: 0.4s;
 }
-.user{
+.tweet-button-icon {
+    display: none;
+}
+
+.user {
     margin-top: 6rem;
-    width: 90%;    
+    width: 90%;
     padding: 0.5rem;
     border-radius: 10rem;
     display: flex;
     align-items: center;
-    
+
 }
-.user:hover{
+
+.user:hover {
     transition: 0.4s;
     cursor: pointer;
     background-color: rgba(128, 128, 128, 0.242);
 }
-img.profile-pic{
+
+img.profile-pic {
     margin-right: 0.7rem;
     width: 40px;
     height: 40px;
     border-radius: 50%;
 }
-p.name{
+
+p.name {
     font-weight: bold;
 }
-p.username{
+
+p.username {
     color: rgb(163, 163, 163);
 }
-.ellipsis{
+
+.ellipsis {
     margin-left: 4rem;
 }
 
 /* main section */
 
-main{
+main {
+
     position: relative;
-    width: 74vw;
-    left: 24.97rem;
+    left: 26%;
+    border-right: 1px solid rgba(128, 128, 128, 0.493);
+
 }
-.main-header{
+
+.main-header {
+    min-width: max-content;
     padding: 0.5rem;
-    width: 39vw;
     position: sticky;
     top: 0px;
     display: flex;
@@ -141,11 +171,13 @@ main{
     background-color: rgba(0, 0, 0, 0.55);
 
 }
-.heading-home > h3{
+
+.heading-home>h3 {
     font-size: 1.2rem;
     margin-left: 1rem;
 }
-.top-tweets{
+
+.top-tweets {
     height: 35px;
     width: 35px;
     border-radius: 50%;
@@ -153,30 +185,32 @@ main{
     justify-content: center;
     align-items: center;
 }
-.top-tweets:hover{
+
+.top-tweets:hover {
     transition: 0.4s;
     background-color: rgba(135, 207, 235, 0.279);
 }
-div.scroll-feed{
 
-    width: 39vw;
-}
-.create-post{
+
+.create-post {
     background-color: black;
     border-bottom: 1px solid rgba(128, 128, 128, 0.493);
 }
-.upper-section{
+
+.upper-section {
     padding: 0.5rem 1rem;
     display: flex;
     align-items: center;
 }
-div.upper-section > .profile-pic{
+
+div.upper-section>.profile-pic {
     margin-right: 0.7rem;
     width: 50px;
     height: 50px;
     border-radius: 50%;
 }
-.create-post input{
+
+.create-post input {
     border: none;
     color: white;
     margin-top: 0.5rem;
@@ -184,19 +218,22 @@ div.upper-section > .profile-pic{
     outline: none;
     font-size: 1.2rem;
 }
-div.lower-section{
+
+div.lower-section {
     padding: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+
 }
-.icons{
+
+.icons {
     margin-left: 3.54rem;
     display: flex;
     gap: 0.5rem;
 }
-.icon-box{
+
+.icon-box {
     height: 30px;
     width: 30px;
     padding: 0.2rem;
@@ -205,16 +242,19 @@ div.lower-section{
     justify-content: center;
     align-items: center;
 }
-.icon-box:hover{
+
+.icon-box:hover {
     background-color: rgba(135, 207, 235, 0.215);
     transition: 0.4s;
     cursor: pointer;
 }
-.icon-box > i{
+
+.icon-box>i {
     font-size: 0.9rem;
     color: #1D9BF0;
 }
-button.tweet-post{
+
+button.tweet-post {
     background-color: rgb(25, 101, 152);
     padding: 0.5rem 1rem;
     color: rgba(255, 255, 255, 0.522);
@@ -225,50 +265,95 @@ button.tweet-post{
     border-radius: 5rem;
 
 }
-.news-feed{
+
+.news-feed {
     height: 500vh;
     background-color: black;
-    width: 100%;
+    min-width: max-content;
 }
-div.news-feed-post{
+
+div.news-feed-post,
+.news-feed-post2 {
+    width: 100%;
     padding: 1rem 0;
+    padding-right: 16px;
     background-color: black;
     color: white;
     display: flex;
     border-bottom: 1px solid rgba(128, 128, 128, 0.493);
 
 }
-.left{
+
+.left {
     padding: 0.5rem;
+    
 }
-.left > img{
+
+.left>img {
     border-radius: 50%;
 }
-.right-upper{
+.right-upper-main{
+    display: flex;
+    justify-content: space-between;
+}
+.right-upper {
     display: flex;
     gap: 0.2rem;
 }
-.right-lower{
+
+.right-lower {
     padding: 0.3rem 0;
 }
-pre{
+
+pre {
     color: rgb(212, 212, 212);
 }
-.actions{
+
+.actions {
     display: flex;
     margin: 0 1rem;
     justify-content: space-between;
 }
-.action-box{
+
+.action-box {
     display: flex;
     align-items: center;
     gap: 0.5rem;
 }
-.box{
+
+.box {
     height: 30px;
     width: 30px;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.post2-caption {
+    font-weight: 300;
+    color: rgb(212, 212, 212);
+    margin: 0.3rem 0.2rem;
+}
+
+.post2-bg {
+    border-radius: 0.8rem;
+}
+.tweet-post-svg{
+    height: 24px;
+    width: 24px;
+}
+.r-jwli3a{
+    fill: white;
+}
+@media screen and (max-width: 1280px) {
+    div.capsule > p{
+        display: none;
+    }   
+    .tweet-button-text {
+        display: none;
+    }
+    .tweet-button-icon {
+        display: block;
+    }
 }
